--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 :root {
     --color-green: hsl(75, 94%, 57%);
 
-    --color-grey: hsl(0, 0%, 20%);
-    --color-grey: hsl(0, 0%, 12%);
-    --color-grey: hsl(0, 0%, 8%); 
+    --color-grey-700: hsl(0, 0%, 20%);
+    --color-grey-800: hsl(0, 0%, 12%);
+    --color-grey-900: hsl(0, 0%, 8%); 
 
     --font-family-inter: "Inter", serif;
 }
@@ -14,4 +14,85 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100dvh;
+    background-color: var(--color-grey-900);
+}
+section {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    align-items: center;
+    gap: 1rem;
+    background-color: var(--color-grey-800);
+    border: none;
+    border-radius: 11px;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.content img {
+    width: 80px;
+    border: none;
+    border-radius: 50%;
+}
+.content h2 {
+    font-size: 1.65rem;
+    font-family: var(--font-family-inter);
+    font-weight: 400;
+    color: #fff;
+    margin-top: 1.5rem;
+    line-height: 2.5rem;
+}
+.content span {
+    font-family: var(--font-family-inter);
+    color: var(--color-green);
+    font-size: 14px;
+    font-weight: 600;
+}
+.content p {
+    color: #fff;
+    font-family: var(--font-family-inter);
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0.75rem;
+}
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+}
+a {
+    background-color: var(--color-grey-700);
+    padding: 0.35rem 5.5rem;
+    font-family: var(--font-family-inter);
+    font-weight: 600;
+    color: #fff;
+    border-radius: 7px;
+    border: none;
+    text-decoration: none;
+    transition: 0.5s all;
+}
+a:hover {
+    background-color: var(--color-green);
+    color: var(--color-grey-800);
+    transition: 0.5s all;
+}
+
+@media screen and (max-width: 400px) {
+    section {
+        padding: 2rem 1.5rem;
+    }
+    a {
+        padding: 0.35rem 3.5rem;
+    }
 }
